--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,286 @@
-<div>hello world you are in authors!</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"
+    integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../main.css">
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
+  </script>
+
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <div class="frame">
+    <div class="main_frame">
+      <div class="left_frame">
+        <div class="left_1">
+          <div class="left_1-1">
+            <img src="images/profile.png" width="156px" height="142px" alt="">
+          </div>
+          <div class="left_1-2">
+            <%=user.name%>
+          </div>
+          <div class="left_1-3">
+            <%=user.profession%>
+          </div>
+          <div class="left-icons">
+            <div class="link_href">
+
+              <div class="icon">
+                <i class="ri-facebook-circle-line"></i>
+              </div>
+              <div class="icon">
+                <i class="ri-instagram-line"></i>
+              </div>
+              <div class="icon">
+                <i class="ri-twitter-line"></i>
+              </div>
+              <div class="icon">
+                <i class="ri-linkedin-box-line"></i>
+              </div>
+              <div class="icon">
+                <i class="ri-youtube-line"></i>
+              </div>
+              <div class="icon">
+                <i class="ri-dribbble-fill"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="marginer"></div>
+        <div class="left_2">
+          <div class="left-left">
+            <h2 class="l1">Age:</h2>
+            <h2 class="l2">Residence:</h2>
+            <h2 class="l3">Freelance:</h2>
+            <h2 class="l4">Address:</h2>
+          </div>
+          <div class="left-right">
+            <h2 class="l5">24</h2>
+            <h2 class="l6">BD</h2>
+            <h2 class="l7">Available</h2>
+            <h2 class="l8">Dhaka,Bangladesh</h2>
+          </div>
+        </div>
+        <div class="marginer"></div>
+        <div class="left_3">
+          <h2>Languages</h2>
+          <div class="reyting">
+            <div class="reyting1">
+              <p class="r1">Bangla</p>
+              <p class="r2">100%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="217" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+
+
+            <div class="reyting1">
+              <p class="r1">English</p>
+              <p class="r2">80%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="208" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+
+
+            <div class="reyting1">
+              <p class="r1">Spanish</p>
+              <p class="r2">60%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="190" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="marginer"></div>
+        <div class="left_4">
+          <h2>Skills</h2>
+          <div class="reyting">
+            <div class="reyting1">
+              <p class="r1">Html</p>
+              <p class="r2">90%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="209" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+
+            <div class="reyting1">
+              <p class="r1">CSS</p>
+              <p class="r2">85%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="207" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+
+            <div class="reyting1">
+              <p class="r1">Js</p>
+              <p class="r2">80%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="201" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+
+            <div class="reyting1">
+              <p class="r1">PHP</p>
+              <p class="r2">75%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="187" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+
+            <div class="reyting1">
+              <p class="r1">WordPress</p>
+              <p class="r2">85%</p>
+            </div>
+            <div class="line1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="222" height="6" viewBox="0 0 222 6" fill="none">
+                <rect x="0.75" y="0.75" width="220.5" height="4.5" rx="2.25" stroke="#FFB400" stroke-width="0.5" />
+                <rect x="2" y="2" width="207" height="2" rx="1" fill="#FFB400" />
+              </svg>
+            </div>
+          </div>
+
+          <div class="marginer1"></div>
+        </div>
+        <div class="left_5">
+          <h2>Extra Skills</h2>
+          <div class="statik">
+            <p>Bootstrap, Materialize</p>
+            <p>Stylus, Sass, Less</p>
+            <p>Gulp, Webpack, Grunt</p>
+            <p>GIT Knowledge</p>
+          </div>
+        </div>
+      </div>
+      <div class="urta">
+        <div class="margin-top">
+          <div class="margin-left">
+            <h1 class="m1">Doctor neurologists <br> in OHSU Hospital</h1>
+            <p class="m2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat
+              lobortis. Natoque
+              rutrum semper sed suspendisse nunc lectus.</p>
+            <button>
+              <h2 class="button">HIRE MY <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                  viewBox="0 0 17 17" fill="none">
+                  <g clip-path="url(#clip0_2_2655)">
+                    <path
+                      d="M10.8554 7.72765L7.27939 4.15165L8.22206 3.20898L13.4074 8.39432L8.22206 13.5797L7.27939 12.637L10.8554 9.06098H2.74072V7.72765H10.8554Z"
+                      fill="#2B2B2B" />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_2_2655">
+                      <rect width="16" height="16" fill="white" transform="translate(0.0742188 0.394531)" />
+                    </clipPath>
+                  </defs>
+                </svg></h2>
+            </button>
+          </div>
+          <div class="margin-img">
+            <img
+              src="https://s3-alpha-sig.figma.com/img/aad3/7bdf/81d3bac886d50f470fcaa991fa4cc196?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Ulrb5BxmbcZIoFF4xQiAd3DaE~SzUWe3w5-k~k6ohquX~v97EU9aSxGdJVcko-fZ48TvpxcN0-yWjYLMcu4O~BboNh4JKJBwuKFHMSgtB40Swt7e~apSkK2G9r4iwOXOb95ngUj04hZk6Q~Oavs8kmBxmVIAX5uYvYkAbI1cZJU5ucbDyfHE970fA2vscLz1Ogh72TdOI~RZT4PExRTtfoMCLV2VgX4vLWTCsgArzUlKwp3HdKwFtBLoXQoJ~whJH6uFT7G6j0RRZN-t5I~Rv3XYKpt28BElENQ2ZieqgaTXU3qO0gHEJKTzJDa0-3EqnKAxh-fgoixnCGS7tjQl9Q__"
+              alt="">
+          </div>
+        </div>
+        <div class="midd_frame">
+          <h1 class="text">my services</h1>
+          <p class="center-main">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br>do amet sint. Velit officia consequat duis enim
+            velit mollit. <br>lorem ipsum</p>
+            <div class="cards">
+              <div class="card-top">
+                <div class="card">
+                  <div class="img-card">
+                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  </div>
+                  <h2 class="card-content">web development</h2>
+                  <p class="content">blog, e-commerce</p>
+                </div>
+
+                <div class="card">
+                  <div class="img-card">
+                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  </div>
+                  <h2 class="card-content">uI/uX design</h2>
+                  <p class="content">Mobile app, website design</p>
+                </div>
+
+                <div class="card">
+                  <div class="img-card">
+                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  </div>
+                  <h2 class="card-content">sound design</h2>
+                  <p class="content">Voice Over, Beat Making</p>
+                </div>
+              </div>
+              <div class="card-bottom">
+                <div class="card">
+                  <div class="img-card">
+                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  </div>
+                  <h2 class="card-content">game design</h2>
+                  <p class="content">Character Design, Props & Objects</p>
+                </div>
+
+                <div class="card">
+                  <div class="img-card">
+                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  </div>
+                  <h2 class="card-content">photography</h2>
+                  <p class="content">portrait, product photography</p>
+                </div>
+
+                <div class="card">
+                  <h2 class="card-content1">advertising</h2>
+                  <p class="content">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Vitae <br> nulla diam in ac dictum a urna <br> viverra morbi. </p>
+                  <h2 class="ohiri">ORDER NOW <i class="ri-arrow-right-s-line"></i></h2>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="right_frame">
+        <div class="iocn1">
+          <i class="ri-contrast-2-fill"></i>
+        </div>
+        <div class="icon2">
+          <img src="../public/author/images/Union (1).png" alt="">
+        </div>
+        <div class="icon3">
+          
+        </div>
+      </div>
+    </div>
+</body>
+
+</html>
