--- a/views/author.ejs
+++ b/views/author.ejs
@@ -215,58 +215,60 @@
         </div>
         <div class="midd_frame">
           <h1 class="text">my services</h1>
-          <p class="center-main">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br>do amet sint. Velit officia consequat duis enim
+          <p class="center-main">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br>do amet sint. Velit
+            officia consequat duis enim
             velit mollit. <br>lorem ipsum</p>
-            <div class="cards">
-              <div class="card-top">
-                <div class="card">
-                  <div class="img-card">
-                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
-                  </div>
-                  <h2 class="card-content">web development</h2>
-                  <p class="content">blog, e-commerce</p>
+          <div class="cards">
+            <div class="card-top">
+              <div class="card">
+                <div class="img-card">
+                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
                 </div>
-
-                <div class="card">
-                  <div class="img-card">
-                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
-                  </div>
-                  <h2 class="card-content">uI/uX design</h2>
-                  <p class="content">Mobile app, website design</p>
-                </div>
-
-                <div class="card">
-                  <div class="img-card">
-                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
-                  </div>
-                  <h2 class="card-content">sound design</h2>
-                  <p class="content">Voice Over, Beat Making</p>
-                </div>
+                <h2 class="card-content">web development</h2>
+                <p class="content">blog, e-commerce</p>
               </div>
-              <div class="card-bottom">
-                <div class="card">
-                  <div class="img-card">
-                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
-                  </div>
-                  <h2 class="card-content">game design</h2>
-                  <p class="content">Character Design, Props & Objects</p>
-                </div>
 
-                <div class="card">
-                  <div class="img-card">
-                    <img src="../public/author/images/card1.svg" alt="" id="qwe">
-                  </div>
-                  <h2 class="card-content">photography</h2>
-                  <p class="content">portrait, product photography</p>
+              <div class="card">
+                <div class="img-card">
+                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
                 </div>
+                <h2 class="card-content">uI/uX design</h2>
+                <p class="content">Mobile app, website design</p>
+              </div>
 
-                <div class="card">
-                  <h2 class="card-content1">advertising</h2>
-                  <p class="content">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Vitae <br> nulla diam in ac dictum a urna <br> viverra morbi. </p>
-                  <h2 class="ohiri">ORDER NOW <i class="ri-arrow-right-s-line"></i></h2>
+              <div class="card">
+                <div class="img-card">
+                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
                 </div>
+                <h2 class="card-content">sound design</h2>
+                <p class="content">Voice Over, Beat Making</p>
               </div>
             </div>
+            <div class="card-bottom">
+              <div class="card">
+                <div class="img-card">
+                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                </div>
+                <h2 class="card-content">game design</h2>
+                <p class="content">Character Design, Props & Objects</p>
+              </div>
+
+              <div class="card">
+                <div class="img-card">
+                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                </div>
+                <h2 class="card-content">photography</h2>
+                <p class="content">portrait, product photography</p>
+              </div>
+
+              <div class="card">
+                <h2 class="card-content1">advertising</h2>
+                <p class="content">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Vitae <br> nulla diam in
+                  ac dictum a urna <br> viverra morbi. </p>
+                <h2 class="ohiri">ORDER NOW <i class="ri-arrow-right-s-line"></i></h2>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="right_frame">
@@ -276,9 +278,34 @@
         <div class="icon2">
           <img src="../public/author/images/Union (1).png" alt="">
         </div>
-        <div class="icon3">
-          
+        <div class="icon-all">
+
+
+          <div class="icon3">
+            <i class="ri-home-2-fill"></i>
+          </div>
+          <div class="icon4">
+
+            <i class="ri-code-box-line"></i>
+          </div>
+          <div class="icon5">
+
+            <i class="ri-user-received-2-fill"></i>
+          </div>
+          <div class="icon6">
+
+            <i class="ri-folder-2-line"></i>
+          </div>
+          <div class="icon7">
+
+            <i class="ri-square-line"></i>
+          </div>
+          <div class="icon8">
+
+            <i class="ri-chat-4-line"></i>
+          </div>
         </div>
+
       </div>
     </div>
 </body>
