--- a/views/author.ejs
+++ b/views/author.ejs
@@ -175,9 +175,15 @@
           <div class="marginer1"></div>
         </div>
         <div class="left_5">
-          <h2>Extra Skills</h2>
+          <h2 class="extra">Extra Skills</h2>
           <div class="statik">
-            <p>Bootstrap, Materialize</p>
+            <div class="statik1">
+              <div class="font-size">
+
+                <!-- <img src="images/pasi.png" alt=""> -->
+              </div>
+              <p>Bootstrap, Materialize</p>
+            </div>
             <p>Stylus, Sass, Less</p>
             <p>Gulp, Webpack, Grunt</p>
             <p>GIT Knowledge</p>
@@ -222,7 +228,7 @@
             <div class="card-top">
               <div class="card">
                 <div class="img-card">
-                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  <img src="images/img1.png" alt="" id="qwe">
                 </div>
                 <h2 class="card-content">web development</h2>
                 <p class="content">blog, e-commerce</p>
@@ -230,7 +236,7 @@
 
               <div class="card">
                 <div class="img-card">
-                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  <img src="images/card2.png" alt="" id="qwe">
                 </div>
                 <h2 class="card-content">uI/uX design</h2>
                 <p class="content">Mobile app, website design</p>
@@ -238,7 +244,7 @@
 
               <div class="card">
                 <div class="img-card">
-                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  <img src="images/card3.png" alt="" id="qwe">
                 </div>
                 <h2 class="card-content">sound design</h2>
                 <p class="content">Voice Over, Beat Making</p>
@@ -247,7 +253,7 @@
             <div class="card-bottom">
               <div class="card">
                 <div class="img-card">
-                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  <img src="images/card4.png" alt="" id="qwe">
                 </div>
                 <h2 class="card-content">game design</h2>
                 <p class="content">Character Design, Props & Objects</p>
@@ -255,7 +261,7 @@
 
               <div class="card">
                 <div class="img-card">
-                  <img src="../public/author/images/card1.svg" alt="" id="qwe">
+                  <img src="images/card5.png" alt="" id="qwe">
                 </div>
                 <h2 class="card-content">photography</h2>
                 <p class="content">portrait, product photography</p>
@@ -269,6 +275,12 @@
               </div>
             </div>
           </div>
+          <div class="bottom-farm">
+            <h1 class="rasul">Price plans</h1>
+            <p class="asil">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
+              velit mollit. lorem ipsum</p>
+          </div>
+
         </div>
       </div>
       <div class="right_frame">
@@ -276,7 +288,8 @@
           <i class="ri-contrast-2-fill"></i>
         </div>
         <div class="icon2">
-          <img src="../public/author/images/Union (1).png" alt="">
+
+          <img src="images/home.png" alt="" style="margin-top: 127px;">
         </div>
         <div class="icon-all">
 
@@ -307,6 +320,7 @@
         </div>
 
       </div>
+      
     </div>
 </body>
 
