--- a/views/author.ejs
+++ b/views/author.ejs
@@ -193,30 +193,63 @@
       <div class="urta">
         <div class="margin-top">
           <div class="margin-left">
+            <div class="d-flex">
+              <div class="birinchi">
+                <img src="images/birinchi.png" alt="">
+              </div>
+              <div class="ikkinchi">
+                <img src="images/ikkinchi.png" alt="">
+              </div>
+            </div>
+
             <h1 class="m1">Doctor neurologists <br> in OHSU Hospital</h1>
             <p class="m2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat
               lobortis. Natoque
               rutrum semper sed suspendisse nunc lectus.</p>
-            <button>
-              <h2 class="button">HIRE MY <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
-                  viewBox="0 0 17 17" fill="none">
-                  <g clip-path="url(#clip0_2_2655)">
-                    <path
-                      d="M10.8554 7.72765L7.27939 4.15165L8.22206 3.20898L13.4074 8.39432L8.22206 13.5797L7.27939 12.637L10.8554 9.06098H2.74072V7.72765H10.8554Z"
-                      fill="#2B2B2B" />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_2_2655">
-                      <rect width="16" height="16" fill="white" transform="translate(0.0742188 0.394531)" />
-                    </clipPath>
-                  </defs>
-                </svg></h2>
-            </button>
+            <div class="d-flex">
+              <button>
+                <h2 class="button">HIRE MY
+                  <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+                    <g clip-path="url(#clip0_2_2655)">
+                      <path
+                        d="M10.8554 7.72765L7.27939 4.15165L8.22206 3.20898L13.4074 8.39432L8.22206 13.5797L7.27939 12.637L10.8554 9.06098H2.74072V7.72765H10.8554Z"
+                        fill="#2B2B2B" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_2_2655">
+                        <rect width="16" height="16" fill="white" transform="translate(0.0742188 0.394531)" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </h2>
+              </button>
+              <div class="kvadrat-icon">
+                <img src="images/turtinchi.png" alt="">
+              </div>
+              <div class="besh-dumaloq-icon">
+                <img src="images/birinchi.png" alt="">
+
+
+              </div>
+            </div>
+
+            <div class="bottom-icon">
+              <img src="images/ikkinchi.png" alt="">
+            </div>
           </div>
           <div class="margin-img">
             <img
               src="https://s3-alpha-sig.figma.com/img/aad3/7bdf/81d3bac886d50f470fcaa991fa4cc196?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Ulrb5BxmbcZIoFF4xQiAd3DaE~SzUWe3w5-k~k6ohquX~v97EU9aSxGdJVcko-fZ48TvpxcN0-yWjYLMcu4O~BboNh4JKJBwuKFHMSgtB40Swt7e~apSkK2G9r4iwOXOb95ngUj04hZk6Q~Oavs8kmBxmVIAX5uYvYkAbI1cZJU5ucbDyfHE970fA2vscLz1Ogh72TdOI~RZT4PExRTtfoMCLV2VgX4vLWTCsgArzUlKwp3HdKwFtBLoXQoJ~whJH6uFT7G6j0RRZN-t5I~Rv3XYKpt28BElENQ2ZieqgaTXU3qO0gHEJKTzJDa0-3EqnKAxh-fgoixnCGS7tjQl9Q__"
               alt="">
+              
+              <div class="img-left">
+                <img src="images/uchinchi.png" alt="">
+              </div>
+              <div class="uchburchek-icon">
+                <img src="images/oltinchi.png" alt="">
+              </div>
+           
+              
           </div>
         </div>
         <div class="midd_frame">
@@ -277,7 +310,8 @@
           </div>
           <div class="bottom-farm">
             <h1 class="rasul">Price plans</h1>
-            <p class="asil">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
+            <p class="asil">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+              consequat duis enim
               velit mollit. lorem ipsum</p>
           </div>
 
@@ -320,7 +354,7 @@
         </div>
 
       </div>
-      
+
     </div>
 </body>
 
