--- a/views/author.ejs
+++ b/views/author.ejs
@@ -315,6 +315,17 @@
               velit mollit. lorem ipsum</p>
           </div>
 
+          <div class="bottom-cards">
+            <div class="bottom-card">
+              <div class="card-content">
+                <h3 class="card-title">Silver</h3>
+                <p class="card-price">$0.00</p>
+                <p> /Hour</p>
+              </div>
+              
+            </div>
+          </div>
+
         </div>
       </div>
       <div class="right_frame">
