--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -33,7 +33,7 @@
 
 
     <ul id="item-list" class="list-group pb-5">
-    <%=items.map(function(item) { %>
+    <% items.map(function(item) { %>
       <li class="list-group-item list-group-item-info d-flex align-items-center justify-content-between">
         <span class="item-text"><%=item.reja%></span>
         <div>
@@ -49,6 +49,8 @@
       Hamma Rejalarni Ochitish
     </button>
   </div>
+  <script src="https://axios-http.com/docs/intro"></script>
+  <script src="/browser.js"></script>
 
 </body>
 
