--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reja</title>
-  <link rel="stylesheet" href="./harid.ejs">
+  <!-- <link rel="stylesheet" href="./harid.ejs"> -->
+  <link rel="stylesheet" href="/styles/harid.css">
+
 </head>
 
 <body style="background-color: wheat;">
@@ -49,7 +51,7 @@
       Hamma Rejalarni Ochitish
     </button>
   </div>
-  <script src="https://axios-http.com/docs/intro"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/browser.js"></script>
 
 </body>
